# MinecraftFpsEngine

./: .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/workflows/: auto-fix-bot.yml  build.yml  generate-wrapper.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/java/com/minefilter/launcher/: FilterEngine.kt  JvmProfiler.kt  MainActivity.kt
app/src/main/res/layout/: activity_main.xml
java_agent/: build.gradle.kts
java_agent/src/main/java/com/minefilter/agent/: AgentMain.java  RendererTransformer.java
native_engine/: CMakeLists.txt
native_engine/include/: compute_shader.h  filter_pipeline.h  hook.h
native_engine/shaders/: culling.comp  upscale.comp
native_engine/src/: compute_shader.cpp  filter_pipeline.cpp  hook.cpp
